--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <nav class="navbar navbar-expand-lg fixed-top" id="mainNav">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <span class="mabeet-logo">Mabeet</span>
-                <i class="fa-solid fa-bed icon-small"></i>
+                <i class="fa-solid fa-bed"></i>
+                <span>Mabeet</span>
             </a>
             
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
