--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mabeet - حجوزات السفر والسكن</title>
+    <title>Mabeet </title>
     
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.rtl.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -447,7 +447,7 @@
             </div>
             
             <div class="copyright">
-                <p>© 2025 Mabeet. جميع الحقوق محفوظة.</p>
+                <p>© 2025 Mabeet.</p>
             </div>
         </div>
     </footer>
